Bug 284786 [CSS] Perspective tab alignment off

--- a/examples/org.eclipse.e4.ui.examples.legacy.workbench/css/webby.css
+++ b/examples/org.eclipse.e4.ui.examples.legacy.workbench/css/webby.css
@@ -45,7 +45,7 @@ ETabItem.active:selected {
 #PerspectiveStack {
 	background-color: rgb(241, 240, 245); 
 	margin: 0px;	
-	tab-margin-offset: 12px;
+	tab-margin-offset: 9px;
 }
 
 #PerspectiveStack > ETabItem {
